Created home, shop, and about webpages
Begun to build out templates, added tentative assets and copy

--- a/citations.html
+++ b/citations.html
@@ -15,21 +15,19 @@
 	</head>
 
 	<body>
-		<h1>Citations</h1>
-		
-		<header>
+		<!-- <header> -->
 		<!--Navigation Bar-->
-			 <nav class="grid styleguide">
+			 <!-- <nav class="grid styleguide">
 				<a href="index.html">Home</a>
 				<a href="sitemap.html">Site Map</a>
 				<a href="wireframes.html">Wireframes</a>
 				<a href="styleguide.html">Styleguide</a>
 				<a href="citations.html">Citations</a>
 			</nav> 
-		</header>
+		</header> -->
 
 		<section class="citations">
-			<h1 class="template">Citations</h1>
+			<h1> Citations </h1>
 			<p> A list of references that have been used for this project.</p>
 
 			<h2>Coding Support</h2>
@@ -90,7 +88,7 @@
 					<li> Shopping Cart [Icon]. Retrieved from <a href="https://material.io/resources/icons/">https://material.io/resources/icons/</a></li>
 				</ul>
 
-		</section> <!--Citation Section Ends-->
+		</section> 
 		
 	</body>
 
