--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 
-<!-- Referenced Weeks 1 and 2 tutorials to build out structure -->
+<!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional
+	codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
+
 
 <!doctype html>
 		
@@ -18,10 +20,7 @@
 	</head>
 
 	<body>
-		<h1>Four Seasons Floral: Branding</h1>
-
 		<header>
-			<!--Navigation Bar-->
 			 <nav class="grid styleguide">
 				<a href="index.html">Home</a>
 				<a href="sitemap.html">Site Map</a>
@@ -31,10 +30,9 @@
 			</nav> 
 		</header>
 
-		<!--Brand Definition -->
 		<section class="branding">
 			<section class="definition">
-			<h1 class="template">Brand Definition</h1>		
+			<h1 class="styleguide">Brand Definition</h1>		
 				<h2>About Four Seasons Floral</h2>
 					<p> 
 						Four Seasons Floral is a family-owned and full-service floral shop based in Vancouver, BC. They create bespoke floral arrangements for any types of occasions.
@@ -50,16 +48,13 @@
 						Four Seasons Floral strives to create thoughtful and memorable experiences through the language of flowers. They source locally from flower auctions and through foraging from their own backyards. Four Season Florals carefully inspects each stem, cleans and cares for flowers in a way that meets their high standards.
 					</p>
 			</section> 
-	
 
 			<section class="art-direction">
-				<h1 class="template">SAMPLE ART DIRECTION</h1>	
-					<figure>
-						<img src="img/art-direction-sample.png" alt="A moodboard for a potential art direction.">
-						<figcaption>A moodboard for a potential art direction. </figcaption>
-					</figure>
+				<h1 class="styleguide">SAMPLE ART DIRECTION</h1>	
+					<img src="img/art-direction-sample.png" alt="A moodboard for a potential art direction.">
 			</section>
-		</section> <!--Branding Ends-->
+
+		</section> <!--.branding ends -->
 		
 	</body>
 
