--- a/sitemap.html
+++ b/sitemap.html
@@ -1,5 +1,7 @@
 
-<!-- Referenced Weeks 1 and 2 tutorials to build out structure -->
+
+<!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional
+	codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
 
 <!doctype html>
 		
@@ -16,10 +18,7 @@
 	</head>
 
 	<body>
-		<h1>Site Map</h1>
-
 		<header>
-		<!--Navigation Bar-->
 			 <nav class="grid styleguide">
 				<a href="index.html">Home</a>
 				<a href="sitemap.html">Site Map</a>
@@ -29,11 +28,10 @@
 			</nav> 
 		</header>
 
-		<!--Site Map Section-->
 		<section class="sitemap">
-			<h1 class="template">Site Map</h1>
+			<!-- <h1 class="styleguide">Site Map</h1> -->
 				<img src="img/sitemap.png" alt="A site map of the website.">
-		</section> <!--Site Map Section Ends-->
+		</section> 
 
 	</body>
 
