--- a/wireframes.html
+++ b/wireframes.html
@@ -1,5 +1,6 @@
 
-<!-- Referenced Weeks 1 and 2 tutorials to build out structure -->
+<!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional
+	codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
 
 <!doctype html>
 		
@@ -16,10 +17,7 @@
 	</head>
 
 	<body>
-		<h1>User Flows</h1>
-
 		<header>
-		<!--Navigation Bar-->
 			 <nav class="grid styleguide">
 				<a href="index.html">Home</a>
 				<a href="sitemap.html">Site Map</a>
@@ -31,7 +29,7 @@
 
 		<!--User Goals Section-->
 		<section class="user-tasks">
-			<h1 class="template">User Tasks</h1>
+			<h1 class="styleguide">User Tasks</h1>
 				<ol>
 					<li>Learn about what the company values </li>
 					<li>Order a bouquet of flowers for a special occasion, like an anniversary</li>
@@ -44,12 +42,8 @@
 				</ol>
 		</section> 
 
-		<!--Wireframes Section-->
-		<section class="wireframes">
-			<h1 class="template">User Flow Wireframes</h1>
-
-				<!--Secondary Navigation (Anchor Links)-->
-				<nav class="grid sub-nav">
+		<!-- Secondary Nav -->
+		<nav class="grid sub-nav">
 					<a href="#task1">Task 1</a>
 					<a href="#task2">Task 2</a>
 					<a href="#task3">Task 3</a>
@@ -58,9 +52,11 @@
 					<a href="#task6">Task 6</a>
 					<a href="#task7">Task 7</a>
 					<a href="#task8">Task 8</a>
-				</nav> 
+		</nav> 
 
-
+		<!--Wireframes Section-->
+		<section class="wireframes">
+			<h1 class="styleguide">User Flow Wireframes</h1>
 				<!--Task 1-->
 				<section id="task1">
 					<h2>Learn about what the company values</h2>
@@ -111,7 +107,7 @@
 						<img src="img/wireframes/task8.png" alt="Desktop and mobile userflows for Task 8: Be informed of products that are new, on sale, and out of stock">
 				</section>
 
-		</section> <!--Wireframes Section Ends-->
+		</section> <!--.wireframes ends-->
 
 		<!--Mock Ups Section-->
 		<section class="mockups">
