Changed copy, made some revisions to 3 webpages

--- a/about.html
+++ b/about.html
@@ -51,15 +51,35 @@
 		</header>
 
 		<!----- Hero Banner----->
-		<div class="hero">
+		<!-- <div class="hero-about">
 			<div class="text">
 				<h1>Meet your friendly neighbourhood garden.</h1>
-				<p>The simple pleasures in life are timeless, no matter how you celebrate them. </p> 
+				<p>
+					We are a family owned and operated full-service floral shop based in Vancouver, BC. creating bespoke floral arrangements for any type of occasions. We have been committed to offering only the freshest and finest floral arrangements and gifts with friendly and timely customer service support. Your support has continued to...
+				</p> 
+			</div>
+			<div class="img">
+				<img src="img/product-mod-image.png">
 			</div>
 		</div>
+ -->
+		<section class ="about">
+			<div class ="hero-about col-2of2-reverse">
+				<div class="text">
+					<h1>Meet your friendly neighbourhood garden.</h1>
+					<p>
+						We are a family owned and operated full-service floral shop based in Vancouver, BC. creating bespoke floral arrangements for any type of occasions. We have been committed to offering only the freshest and finest floral arrangements and gifts with friendly and timely customer service support. Your support has continued to...
+					</p> 
+				</div>
+			</div>
+			<div class = "hero-about col-1of2-reverse">
+				<img src="img/product-mod-image.png " alt="Photo of bouquet of flowers being held by a woman">
+			</div>
+		</section>
 
 		<!----- Values---->
-		<div class ="grid">
+		<section class ="about">
+		<div class ="grid ">
 			<div class ="values col-1of3">
 				<img src="img/flower-tile.png" alt="Photo of peonies">
 				<p>Family owned & operated</p>
@@ -76,6 +96,7 @@
 			</div>
 
 		</div>  <!--.grid ends -->
+		</section>
 
 		<!----- Location ---->
 		<div class ="alternating-content col-1of2">
