--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 		          </div>
 
             	  <div class="grid-col-1of6 search-bar">
-							<input type="text" id="search" name="search" placeholder="Search...">
+						<input type="text" id="search" name="search" placeholder="Search...">
             	  </div>
 
                   <div class="grid-col-1of6">
@@ -52,6 +52,7 @@
 		</header>
 
 		<!----- Hero Banner----->
+		<section class ="about">
 		<div class="hero">
 			<div class="text">
 				<h1>Spread happiness with summer's blooms.</h1>
@@ -60,8 +61,10 @@
 				</a>
 			</div>
 		</div>
+		</section>
 
 		<!----- Product/Service Offerings---->
+		<section class ="home">
 		<div class ="grid">
 			<div class ="menu col-1of3">
 				<a href="shop.html">
@@ -81,6 +84,7 @@
 				<p>Services</p>
 			</div>
 		</div>
+		</section>
 
 		<!----- Alternating Content ----->
 		<div class ="alternating-content col-1of2">
@@ -94,6 +98,7 @@
 			</a>
 		</div>
 
+		<div class="grid">
 		<div class ="alternating-content col-2of2-reverse">
 			<h2>The gift of giving.</h2>
 			<p>Give one of nature’s most beautiful gifts to the people who mean the most to you.</p>
@@ -105,6 +110,7 @@
 		<!-- <div class="alternating-content-two"> -->
 		<div class ="alternating-content col-1of2-reverse">
 			<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
+		</div>
 		</div>
 		<!-- </div> -->
 
