Changed copy in footer

--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
 
 			 <div class="child-footer location">
 				 <h3 class="web">OUR LOCATION</h3>
-				 <p>3375 Kingsway #102, 
+				 <p>102 3375 Kingsway
 					Vancouver, B.C. 
 					 V5R 5K6  </p>
 			</div>
