June 15th folder re-upload
this is the most recent copy of all of Jacky's content. Use this as starting point

--- a/shop.html
+++ b/shop.html
@@ -52,10 +52,10 @@
 		</header>
 
 		<!----- Introduction----->
-		<div class="hero">
+		<div class="hero shop">
 			<div class="text">
-				<h1>Celebrate with flowers.</h1>
-				<p>The simple pleasures in life are timeless, no matter how you celebrate them.  </p>
+				<h1>Celebrate with nature.</h1>
+				<p>The simple pleasures in life are timeless, no matter how you celebrate them. </p>
 			</div>
 		</div>
 
@@ -63,45 +63,45 @@
 		<div class ="grid">	
 			<div class="container-product-listing">
 				<div class ="product-item col-1of3">
-				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of bouquet being held">
+				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of Lover's Sunrise bouquet">
 				  	  <p class="product-name">Lover's Sunrise</p>
-					  <p class ="price">$70.99</p>
+					  <p class ="price">$45.99</p>
 					  <div class="btn-position">
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
 
 				<div class ="product-item col-2of3">
-				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of bouquet being held">
-				  	  <p class="product-name">Lover's Sunrise</p>
-					  <p class ="price">$70.99</p>
+				  	 <img src="img/red-bouquet.jpg" alt="Photo of red bouquet">
+				  	  <p class="product-name">Radiantly Rouge</p>
+					  <p class ="price">$55.99</p>
 					  <div class="btn-position">
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
 
 				<div class ="product-item col-3of3">
-				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of bouquet being held">
-				  	  <p class="product-name">Lover's Sunrise</p>
-					  <p class ="price">$70.99</p>
+				  	 <img src="img/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
+				  	  <p class="product-name">English Gardens</p>
+					  <p class ="price">$48.99</p>
 					  <div class="btn-position">
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
 
 				<div class ="product-item col-1of3">
-				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of bouquet being held">
-				  	  <p class="product-name">Lover's Sunrise</p>
-					  <p class ="price">$70.99</p>
+				  	 <img src="img/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
+				  	  <p class="product-name">Just Keep Swimming</p>
+					  <p class ="price">$45.99</p>
 					  <div class="btn-position">
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
 
 				<div class ="product-item col-2of3">
-				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of bouquet being held">
-				  	  <p class="product-name">Lover's Sunrise</p>
-					  <p class ="price">$70.99</p>
+				  	 <img src="img/lavender-bouquet.jpg" alt="Photo of purple bouquet">
+				  	  <p class="product-name">Lavender Dreams</p>
+					  <p class ="price">$40.99</p>
 					  <div class="btn-position">
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
@@ -135,6 +135,12 @@
 					 <img src="img/icons/fb-logo.png" alt="Facebook logo" width="15" height="15">   Facebook
 				 </p>
 			 </div>
+	 	</div>
+
+	 	<div class="sub-footer">
+	 		<p>Made with love in Vancouver, B.C.</p>
+	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
+	 		<a href="citations.html" target="_blank"> Citations</a>
 	 	</div>
 
 	</body>
