Added asterisks to sub-footer
Testing a change

--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
 			 </div>
 	 	</div>
 	 	<div class="sub-footer">
-	 		<p>Made with love in Vancouver, B.C.</p>
+	 		<p>****Made with love in Vancouver, B.C.</p>
 	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
 	 		<a href="citations.html" target="_blank"> Citations</a>
 	 	</div>
