--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
 		<section class ="about">
 		<div class="hero">
 			<div class="text">
-				<h1>Spread happiness with summer's blooms.</h1>
+				<h1>TESTING</h1>
 				<a href="shop.html">
 					<button type="button" class="btn-main"> Shop Bouquets</button>
 				</a>
