Changed copy of banner in homepage to original

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 
 
 <!doctype html>
-
+		
 	<head>
 		<meta charset="utf-8">
 		<title>Four Seasons Floral Homepage</title>
@@ -55,7 +55,7 @@
 		<section class ="about">
 		<div class="hero">
 			<div class="text">
-				<h1>TESTING. TESTING BUT WITH MORE TESTING</h1>
+				<h1>Spread happiness with summer's blooms.</h1>
 				<a href="shop.html">
 					<button type="button" class="btn-main"> Shop Bouquets</button>
 				</a>
@@ -72,7 +72,7 @@
 					<p>Flowers</p>
 				</a>
 			</div>
-
+		
 
 			<div class ="menu col-2of3">
 				<img src="img/plants-tile.jpg" alt="Photo of a green plant">
