--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 
 
 <!doctype html>
-		
+
 	<head>
 		<meta charset="utf-8">
 		<title>Four Seasons Floral Homepage</title>
@@ -17,6 +17,11 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
+
+		<!-- Place your kit's code here -->
+		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
+
+
 	</head>
 
 	<body>
@@ -72,7 +77,7 @@
 					<p>Flowers</p>
 				</a>
 			</div>
-		
+
 
 			<div class ="menu col-2of3">
 				<img src="img/plants-tile.jpg" alt="Photo of a green plant">
@@ -136,8 +141,11 @@
 			 <div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
 				 <p>(604) 738-0678</p>
-				 <p><img src="img/icons/ig-logo.png" alt="Instagram logo" width="15" height="15"> Instagram</p>
-				 <p><img src="img/icons/fb-logo.png" alt="Facebook logo" width="15" height="15"> Facebook</p>
+				 <p><i class="fab fa-instagram"></i> Instagram</p>
+
+				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
+
+
 			 </div>
 	 	</div>
 	 	<div class="sub-footer">
